# end-stage-kidney-webapp

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eskd  manage.py  nginx.conf  pyproject.toml  requirements.txt  test_password_reset.py
docs/: DOCUMENTAZIONE_TECNICA.md  MIGLIORIE_CONSIGLIATE.md  PASSWORD_RESET_VERIFICATO.md
eskd_project/: asgi.py  settings.py  urls.py  wsgi.py
prediction/: admin.py  forms.py  model_loader.py  models.py  tasks.py  urls.py  views.py
prediction/migrations/: 0001_initial.py  0002_visita_data_inferenza_visita_esito_predizione.py  0003_predizione.py  0004_remove_paziente_data_nascita_paziente_eta_and_more.py  0005_remove_paziente_iperteso.py  0006_update_predizione_esito.py  0007_visita_referto.py  0008_predizione_anni_eskd.py  0009_paziente_medici_condivisi.py  0010_paziente_data_di_nascuita.py  0011_rename_data_di_nascuita_paziente_data_nascita.py  0012_usersecurity.py
prediction/templates/: base.html  login.html  register.html
prediction/templates/prediction/: base.html  calcola_eskd.html  calcola_eskd_rapido.html  condividi_paziente.html  conferma_elimina_mestc.html  conferma_elimina_visita.html  confirm_delete_mestc.html  confirm_delete_paziente.html  dettaglio_paziente.html  (+11 more)
prediction/templatetags/: form_tags.py
templates/registration/: base.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_security_start.html  password_reset_security_verify.html  password_reset_subject.txt  security_setup.html
(+2 files in other folders)
